consultation update
